# EclassSystemProject

./: CMakeLists.txt  Course.cpp  EClass.cpp  EClass.h  Person.cpp  Person.h  Professor.cpp  Professor.h  README.md  Student.cpp  Student.h  User.cpp  User.h  main.cpp
aaaa/: AllinOneChanges.cpp  notes.cpp
classFiles/: Course.cpp  EClass.cpp  Person.cpp  Professor.cpp  Student.cpp  User.cpp
classHeaders/: Course.h  EClass.h  Person.h
